[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GUI/credits_menu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://Resources/Themes/pasti_title_label.tres" type="Theme" id=4]

[node name="CreditsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -425.0
margin_top = 40.0
margin_right = 426.0
margin_bottom = 110.0
theme = ExtResource( 4 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -525.5
margin_top = -312.0
margin_right = 525.5
margin_bottom = 312.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BackButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 286.0
margin_right = 1051.0
margin_bottom = 338.0
text = "BACK"

[connection signal="visibility_changed" from="." to="." method="_on_CreditsMenu_visibility_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
